--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
         <title>Scrapify App</title>
+        <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_wNuCzia92MAmdLRzmqitRGvCF7wCZPY"></script> -->
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
